# rust_clap_figment

./: Cargo.toml  README.md  config.toml
src/: cli.rs  config.rs  main.rs
