[package]
name = "rust_clap_figment"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-serde-derive = "0.2.1"
figment = { version = "0.10.15", features = ["toml", "env"] }
humantime-serde = "1.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
